include $(top_srcdir)/Makefile.common

SUBDIRS = \
          common \
          $(EMPTY)

noinst_HEADERS = \
                 $(EMPTY)

bin_PROGRAMS = \
               unpgf \
               untnd \
               $(EMPTY)

unpgf_SOURCES = \
                unpgf.cpp \
                $(EMPTY)
unpgf_LDADD   = \
                common/libcommon.la \
                $(EMPTY)

untnd_SOURCES = \
                untnd.cpp \
                $(EMPTY)
untnd_LDADD   = \
                common/libcommon.la \
                $(EMPTY)
