include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libcommon.la

noinst_HEADERS = \
                 types.h \
                 util.h \
                 version.h \
                 $(EMPTY)

libcommon_la_SOURCES = \
                       util.cpp \
                       version.cpp \
                       $(EMPTY)
